static/css/main.css
/* ... */
.footer.footer--dark .footer__link-item{
    color:#606770;
    color:var(--ifm-footer-link-color)
}
.footer.footer--dark .footer__title{
    color:inherit;
    color:var(--ifm-footer-title-color)
}
.footer .footer__links{
    margin-bottom:1rem
}
.footer .footer__link-item{
    color:#606770;
    color:var(--ifm-footer-link-color);
    line-height:2
}
.footer .footer__link-item:hover{
    color:#3578e5;
    color:var(--ifm-footer-link-hover-color)
}
.footer .footer__logo{
    margin-top:1rem;
    max-width:10rem
}
.footer .footer__title{
    color:inherit;
    color:var(--ifm-footer-title-color)
}
.footer .footer__item{
    margin-top:0
}
.footer .footer__items{
    list-style-type:none;
    margin-bottom:0;
    padding-left:0
}


/*******************************************************************************
** Navbar Section
*******************************************************************************/

.navbar{
    background-color:#fff;
    background-color:var(--ifm-navbar-background-color);
    box-shadow:0 1px 2px 0 rgba(0,0,0,.1);
    box-shadow:var(--ifm-navbar-shadow);
    /* box-shadow:var(--ifm-global-shadow-md) */
    box-sizing:border-box;
    height:3.75rem;
    height:var(--ifm-navbar-height);
    padding:var(--ifm-navbar-padding-vertical) var(--ifm-navbar-padding-horizontal);
    width:100%
}
.navbar,.navbar>.container{
    display:flex
}
.navbar.navbar--fixed-top{
    position:fixed;
    left:0;
    right:0;
    top:0;
    z-index:200;
    z-index:var(--ifm-z-index-fixed)
}
.navbar .navbar__inner{
    align-items:stretch;
    display:flex;
    flex-wrap:wrap;
    justify-content:space-between;
    width:100%
}
.navbar .navbar__brand{
    align-items:center;
    color:#1c1e21;
    color:var(--ifm-navbar-link-color);
    display: block;
    font-weight:700;
    height:3.5rem;
    margin-right:1rem;
    text-decoration:none
}
.navbar .navbar__logo{
    height:100%;
    margin-right:.5rem;
    display:inline-block;
}
.navbar .navbar__items{
    align-items:center;
    display:flex;
    flex:1 0 0
}
.navbar .navbar__items.navbar__items--center{
    flex:0 0 auto
}
.navbar .navbar__items.navbar__items--center .navbar__brand{
    margin:0
}
.navbar .navbar__items.navbar__items--right{
    justify-content:flex-end
}
.navbar .navbar__item{
    display:inline-block;
    padding:var(--ifm-navbar-item-padding-vertical) var(--ifm-navbar-item-padding-horizontal)
}
.navbar .navbar__link{
    color:#1c1e21;
    color:var(--ifm-navbar-link-color);
    cursor:pointer;
    font-weight:500;
    font-weight:var(--ifm-font-weight-semibold);
    padding:var(--ifm-navbar-item-padding-vertical) var(--ifm-navbar-item-padding-horizontal);
    text-decoration:none
}
.navbar .navbar__link.navbar__link--active,.navbar .navbar__link:hover{
    color:#3578e5;
    color:var(--ifm-navbar-link-hover-color)
}
.navbar.navbar--dark{
    --ifm-navbar-background-color:#303846;
    --ifm-navbar-link-color:var(--ifm-color-white);
    --ifm-navbar-link-hover-color:var(--ifm-color-primary);
    --ifm-navbar-search-input-background-color:hsla(0,0%,100%,0.1);
    --ifm-navbar-search-input-color:var(--ifm-color-white);
    --ifm-navbar-search-input-placeholder-color:hsla(0,0%,100%,0.5);
    background-color:#fff;
    background-color:var(--ifm-navbar-background-color)
}
.navbar.navbar--dark .navbar__brand,.navbar.navbar--dark .navbar__link{
    color:#1c1e21;
    color:var(--ifm-navbar-link-color)
}
.navbar.navbar--dark .navbar__link:hover{
    color:#3578e5;
    color:var(--ifm-navbar-link-hover-color)
}
.navbar.navbar--dark .navbar__search .navbar__search-input{
    background-color:#ebedf0;
    background-color:var(--ifm-navbar-search-input-background-color);
    background-image:url(data:image/svg+xml;
    utf8,SVG_REPLACED);
    background-image:var(--ifm-navbar-search-input-icon);
    color:#444950;
    color:var(--ifm-navbar-search-input-color)
}
.navbar.navbar--dark .navbar__search .navbar__search-input::-webkit-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--dark .navbar__search .navbar__search-input:-ms-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--dark .navbar__search .navbar__search-input::-ms-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--dark .navbar__search .navbar__search-input::placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--primary{
    --ifm-navbar-background-color:var(--ifm-color-primary);
    --ifm-navbar-link-hover-color:var(--ifm-color-white);
    --ifm-navbar-search-input-background-color:hsla(0,0%,100%,0.1);
    --ifm-navbar-search-input-color:var(--ifm-color-emphasis-500);
    --ifm-navbar-search-input-placeholder-color:hsla(0,0%,100%,0.5);
    background-color:#fff;
    background-color:var(--ifm-navbar-background-color)
}
.navbar.navbar--primary .navbar__link:hover{
    color:#3578e5;
    color:var(--ifm-navbar-link-hover-color)
}
.navbar.navbar--primary .navbar__search .navbar__search-input{
    background-color:#ebedf0;
    background-color:var(--ifm-navbar-search-input-background-color);
    background-image:url(data:image/svg+xml;
    utf8,SVG_REPLACED);
    background-image:var(--ifm-navbar-search-input-icon);
    color:#444950;
    color:var(--ifm-navbar-search-input-color)
}
.navbar.navbar--primary .navbar__search .navbar__search-input::-webkit-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--primary .navbar__search .navbar__search-input:-ms-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
.navbar.navbar--primary .navbar__search .navbar__search-input::-ms-input-placeholder{
    color:#bec3c9;
    color:var(--ifm-navbar-search-input-placeholder-color)
}
/* ... */

